Use grid instead of flex to support gap in webkit; fixes #4.

--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -29,7 +29,7 @@ a:hover {
 }
 
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 639px) {
   h1 {
     font-size: 4.6rem !important;
   }
@@ -39,8 +39,8 @@ a:hover {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 640px) {
   body {
-    padding: 80px;
+    padding: 40px;
   }
 }
